# fourchef

./: .gitignore  Cargo.toml  LICENSE  Makefile  README-RUNTIME.txt  README.md  index.html  styles.css
.github/workflows/: windows-build.yml
docs/: BUILD.md
scripts/: build-linux-container.sh  build-linux.sh  build-windows.ps1  postprocess-appimage.sh  trunk-build  trunk-build.cmd  trunk-dev  trunk-dev.cmd  windows-release-checklist.ps1
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  importer.rs  lib.rs  main.rs
tools/container/: Containerfile.linux-build
