[package]
name = "fourchef"
version = "0.1.0"
description = "4chef - chef data suite"
authors = ["you"]
edition = "2021"

[lib]
name = "fourchef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
tauri-plugin-dialog = "2.6.0"
printpdf = "0.7"
docx-rs = "0.4"
pdf-extract = "0.7"
